Dependency updates, added support for weather commands, fixed some bugs, updated outdated data, cleaned up code and added some other nice commands!